performed data cleaning

--- a/BooksSummarie/HandsOnMachineLearning/homl-ch2/Home Price regression model.ipynb
+++ b/BooksSummarie/HandsOnMachineLearning/homl-ch2/Home Price regression model.ipynb
@@ -593,6 +593,331 @@
    "source": [
     "train_copy.plot( kind=\"scatter\" , x=\"median_income\" , y=\"median_house_value\" , alpha = 0.1)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "median_house_value    1.000000\n",
+       "median_income         0.687160\n",
+       "rooms_per_home        0.146285\n",
+       "total_rooms           0.135097\n",
+       "housing_median_age    0.114110\n",
+       "households            0.064506\n",
+       "total_bedrooms        0.047689\n",
+       "house_population     -0.021985\n",
+       "population           -0.026920\n",
+       "longitude            -0.047432\n",
+       "latitude             -0.142724\n",
+       "bedroom_per_rooms    -0.259984\n",
+       "Name: median_house_value, dtype: float64"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "## feature Combination:\n",
+    "## Correlations allow us also to spot if any attributes need to be combined if they are not really correlated to the target label\n",
+    "## ex total rooms in a district is not an informative features and maybe thats why it has a low corr with the median price\n",
+    "## maybe if we divided this over the number of homes in the district this will be more informative.\n",
+    "\n",
+    "\n",
+    "train_copy[\"rooms_per_home\"] = train_copy[\"total_rooms\"]/train_copy[\"households\"]\n",
+    "train_copy[\"bedroom_per_rooms\"] = train_copy[\"total_bedrooms\"]/train_copy[\"total_rooms\"]\n",
+    "train_copy[\"house_population\"] = train_copy[\"population\"]/train_copy[\"households\"]\n",
+    "corr_matrix = train_copy.corr()\n",
+    "\n",
+    "## Now let's check the new features' corr\n",
+    "corr_matrix[\"median_house_value\"].sort_values(ascending = False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## data Cleaning\n",
+    "## now lets get back to the original training example and separate the target value from the dataframe\n",
+    "\n",
+    "X_train = train_setStra.drop(\"median_house_value\" , axis = 1)\n",
+    "Y_train = train_setStra[\"median_house_value\"].copy()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[-118.51     34.26     29.     2119.5     433.     1164.      408.\n",
+      "    3.5409]\n"
+     ]
+    }
+   ],
+   "source": [
+    "## dealing with missing values\n",
+    "## in ML we cannot have blank features so usually there are 3 ways we can deal with this\n",
+    "## first : simply delete the whole row ( this is ok if you have a big dataset )\n",
+    "## second : get rid of the whole feature ( this is more common if there are multiple nulls in the same attribute )\n",
+    "## third : set this nulls with a mean value or any other suitable value ( ex zero for example or median)\n",
+    "\n",
+    "#X_train.dropna(subset=[\"total_bedrooms\"]) ## option 1 \n",
+    "#X_train.drop(\"total_bedrooms\" , axis = 1) ## option 2 - this is inplace\n",
+    "#median = X_train[\"total_bedrooms\"].median()\n",
+    "#X_trian[\"total_bedrooms\"].fillna(median , inplace=True) ## option -3\n",
+    "\n",
+    "# here we will choose option three , but there is a simple function that makes all this for you ( we might need to make this for\n",
+    "## every ferature so it would be an overhead )\n",
+    "## keep in mind that sklearn's imputer don't work in categorical data so we will need to remove the \"ocean proximity\"\n",
+    "## the medians will be saved in the statistic_ variable of the imputer object , we will need to fill the missing values on the \n",
+    "## test data as well\n",
+    "from sklearn.impute import SimpleImputer \n",
+    "\n",
+    "imputer = SimpleImputer(strategy = \"median\")\n",
+    "\n",
+    "X_train_num = X_train.drop(\"ocean_proximity\" , axis =1 )\n",
+    "imputer.fit(X_train_num)\n",
+    "print( imputer.statistics_)\n",
+    "X_train_dropna = imputer.transform(X_train_num)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[-121.89     37.29     38.     ...  710.      339.        2.7042]\n",
+      " [-121.93     37.05     14.     ...  306.      113.        6.4214]\n",
+      " [-117.2      32.77     31.     ...  936.      462.        2.8621]\n",
+      " ...\n",
+      " [-116.4      34.09      9.     ... 2098.      765.        3.2723]\n",
+      " [-118.01     33.82     31.     ... 1356.      356.        4.0625]\n",
+      " [-122.45     37.77     52.     ... 1269.      639.        3.575 ]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(X_train_dropna)\n",
+    "## note this is an numpy array to return this to a pandas dataframe we will need to do this:\n",
+    "X_train_dropna = pd.DataFrame(X_train_dropna , columns = X_train_num.columns , index = X_train_num.index)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>longitude</th>\n",
+       "      <th>latitude</th>\n",
+       "      <th>housing_median_age</th>\n",
+       "      <th>total_rooms</th>\n",
+       "      <th>total_bedrooms</th>\n",
+       "      <th>population</th>\n",
+       "      <th>households</th>\n",
+       "      <th>median_income</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>17606</th>\n",
+       "      <td>-121.89</td>\n",
+       "      <td>37.29</td>\n",
+       "      <td>38.0</td>\n",
+       "      <td>1568.0</td>\n",
+       "      <td>351.0</td>\n",
+       "      <td>710.0</td>\n",
+       "      <td>339.0</td>\n",
+       "      <td>2.7042</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18632</th>\n",
+       "      <td>-121.93</td>\n",
+       "      <td>37.05</td>\n",
+       "      <td>14.0</td>\n",
+       "      <td>679.0</td>\n",
+       "      <td>108.0</td>\n",
+       "      <td>306.0</td>\n",
+       "      <td>113.0</td>\n",
+       "      <td>6.4214</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14650</th>\n",
+       "      <td>-117.20</td>\n",
+       "      <td>32.77</td>\n",
+       "      <td>31.0</td>\n",
+       "      <td>1952.0</td>\n",
+       "      <td>471.0</td>\n",
+       "      <td>936.0</td>\n",
+       "      <td>462.0</td>\n",
+       "      <td>2.8621</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3230</th>\n",
+       "      <td>-119.61</td>\n",
+       "      <td>36.31</td>\n",
+       "      <td>25.0</td>\n",
+       "      <td>1847.0</td>\n",
+       "      <td>371.0</td>\n",
+       "      <td>1460.0</td>\n",
+       "      <td>353.0</td>\n",
+       "      <td>1.8839</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3555</th>\n",
+       "      <td>-118.59</td>\n",
+       "      <td>34.23</td>\n",
+       "      <td>17.0</td>\n",
+       "      <td>6592.0</td>\n",
+       "      <td>1525.0</td>\n",
+       "      <td>4459.0</td>\n",
+       "      <td>1463.0</td>\n",
+       "      <td>3.0347</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6563</th>\n",
+       "      <td>-118.13</td>\n",
+       "      <td>34.20</td>\n",
+       "      <td>46.0</td>\n",
+       "      <td>1271.0</td>\n",
+       "      <td>236.0</td>\n",
+       "      <td>573.0</td>\n",
+       "      <td>210.0</td>\n",
+       "      <td>4.9312</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12053</th>\n",
+       "      <td>-117.56</td>\n",
+       "      <td>33.88</td>\n",
+       "      <td>40.0</td>\n",
+       "      <td>1196.0</td>\n",
+       "      <td>294.0</td>\n",
+       "      <td>1052.0</td>\n",
+       "      <td>258.0</td>\n",
+       "      <td>2.0682</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13908</th>\n",
+       "      <td>-116.40</td>\n",
+       "      <td>34.09</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>4855.0</td>\n",
+       "      <td>872.0</td>\n",
+       "      <td>2098.0</td>\n",
+       "      <td>765.0</td>\n",
+       "      <td>3.2723</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11159</th>\n",
+       "      <td>-118.01</td>\n",
+       "      <td>33.82</td>\n",
+       "      <td>31.0</td>\n",
+       "      <td>1960.0</td>\n",
+       "      <td>380.0</td>\n",
+       "      <td>1356.0</td>\n",
+       "      <td>356.0</td>\n",
+       "      <td>4.0625</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15775</th>\n",
+       "      <td>-122.45</td>\n",
+       "      <td>37.77</td>\n",
+       "      <td>52.0</td>\n",
+       "      <td>3095.0</td>\n",
+       "      <td>682.0</td>\n",
+       "      <td>1269.0</td>\n",
+       "      <td>639.0</td>\n",
+       "      <td>3.5750</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>16512 rows × 8 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       longitude  latitude  housing_median_age  total_rooms  total_bedrooms  \\\n",
+       "17606    -121.89     37.29                38.0       1568.0           351.0   \n",
+       "18632    -121.93     37.05                14.0        679.0           108.0   \n",
+       "14650    -117.20     32.77                31.0       1952.0           471.0   \n",
+       "3230     -119.61     36.31                25.0       1847.0           371.0   \n",
+       "3555     -118.59     34.23                17.0       6592.0          1525.0   \n",
+       "...          ...       ...                 ...          ...             ...   \n",
+       "6563     -118.13     34.20                46.0       1271.0           236.0   \n",
+       "12053    -117.56     33.88                40.0       1196.0           294.0   \n",
+       "13908    -116.40     34.09                 9.0       4855.0           872.0   \n",
+       "11159    -118.01     33.82                31.0       1960.0           380.0   \n",
+       "15775    -122.45     37.77                52.0       3095.0           682.0   \n",
+       "\n",
+       "       population  households  median_income  \n",
+       "17606       710.0       339.0         2.7042  \n",
+       "18632       306.0       113.0         6.4214  \n",
+       "14650       936.0       462.0         2.8621  \n",
+       "3230       1460.0       353.0         1.8839  \n",
+       "3555       4459.0      1463.0         3.0347  \n",
+       "...           ...         ...            ...  \n",
+       "6563        573.0       210.0         4.9312  \n",
+       "12053      1052.0       258.0         2.0682  \n",
+       "13908      2098.0       765.0         3.2723  \n",
+       "11159      1356.0       356.0         4.0625  \n",
+       "15775      1269.0       639.0         3.5750  \n",
+       "\n",
+       "[16512 rows x 8 columns]"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X_train_dropna"
+   ]
   }
  ],
  "metadata": {
