Handeled Text and categorical attributes

--- a/BooksSummarie/HandsOnMachineLearning/homl-ch2/Home Price regression model.ipynb
+++ b/BooksSummarie/HandsOnMachineLearning/homl-ch2/Home Price regression model.ipynb
@@ -635,7 +635,9 @@
     "corr_matrix = train_copy.corr()\n",
     "\n",
     "## Now let's check the new features' corr\n",
-    "corr_matrix[\"median_house_value\"].sort_values(ascending = False)"
+    "corr_matrix[\"median_house_value\"].sort_values(ascending = False)\n",
+    "\n",
+    "## we will add them later in the original training data when we learn about custom transformer functions that fit in a skitlearn pipeline."
    ]
   },
   {
@@ -917,6 +919,398 @@
    ],
    "source": [
     "X_train_dropna"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## now lets handle the categorical attributes\n",
+    "X_train_cat = X_train[[\"ocean_proximity\"]]\n",
+    "X_train_cat\n",
+    "## from the data this seems to be catigorical and not arbitary strings , in ML we usually deal with numeric data so \n",
+    "## it is better to enumerate this attribute using skitlearn ordinalencoders\n",
+    "\n",
+    "from sklearn.preprocessing import OrdinalEncoder\n",
+    "\n",
+    "ordinal_encoder = OrdinalEncoder() \n",
+    "X_train_cat_encoded = ordinal_encoder.fit_transform(X_train_cat)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0.],\n",
+       "       [0.],\n",
+       "       [4.],\n",
+       "       [1.],\n",
+       "       [0.],\n",
+       "       [1.],\n",
+       "       [0.],\n",
+       "       [1.],\n",
+       "       [0.],\n",
+       "       [0.]])"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ordinal_encoder.categories_\n",
+    "\n",
+    "X_train_cat_encoded[:10]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[array(['<1H OCEAN', 'INLAND', 'ISLAND', 'NEAR BAY', 'NEAR OCEAN'],\n",
+       "       dtype=object)]"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "## ordinal encoding is not always a great solution as for the model 1 and 0 are somehow more close than 0 and 4 ( but this is not \n",
+    "## true in the categorical values so better use one hot encoding )\n",
+    "## sklearn hot encoder returns a sparse matrix instead of a 2d array as there will be many reduntant 0s that are never used\n",
+    "## so instead a sprase matrix just stores the places of the ones\n",
+    "from sklearn.preprocessing import OneHotEncoder \n",
+    "hot_encoder = OneHotEncoder()\n",
+    "X_train_hot_encoder = hot_encoder.fit_transform(X_train_cat)\n",
+    "X_train_hot_encoder\n",
+    "hot_encoder.categories_ ## same results as the ordinal encoding\n",
+    "\n",
+    "## well this is great , but what if the was too many categories out there one hot encoding will result in tens of new columns\n",
+    "## this will drematically reduce the model performance(curse  of dimensionality and \n",
+    "## so an overfitted model ) and time taken for training the model. In this case it would be a better idea to replace the categorical \n",
+    "## attribute with a numerical one that represents the current data."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## creating custom transformers objects \n",
+    "## lets create a transformer that add the rooms/household column ..........etc \n",
+    "## recall that numpy c_ function  columnize a list of arrays\n",
+    "##np.c_[np.array([1,2,3]), np.array([4,5,6])]\n",
+    "##array([[1, 4],\n",
+    "##       [2, 5],\n",
+    "##       [3, 6]])\n",
+    "from sklearn.base import BaseEstimator , TransformerMixin \n",
+    "rooms_ix , bedrooms_ix , population_ix , households_ix = 3,4,5,6\n",
+    "\n",
+    "class CombinedAttributesAdder(BaseEstimator , TransformerMixin ):\n",
+    "    def __init__(self , add_bedrooms_per_room =True):\n",
+    "        self.add_bedrooms_per_room = add_bedrooms_per_room \n",
+    "    def fit(self, X , y = None ):\n",
+    "        return self ## combining attr. requires no fitting so return self \n",
+    "    def transform( self , X ):\n",
+    "        rooms_per_household = X[: , rooms_ix] / X[: , households_ix] ## transfroms deal with numpy array not DF\n",
+    "        population_per_household = X[:, population_ix] / X[:,households_ix]\n",
+    "        if self.add_bedrooms_per_room:\n",
+    "            bedrooms_per_room = X[: , bedrooms_ix] / X[: , rooms_ix]\n",
+    "            return np.c_[X, rooms_per_household , population_per_household , bedrooms_per_room ]\n",
+    "        else:\n",
+    "            return np.c_[X, rooms_per_household , population_per_household]\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "attr_combiner = CombinedAttributesAdder( add_bedrooms_per_room = False) ## here we are not sure that adding this attr will make\n",
+    "## a great improvement so we keep the decision as hyperparameter.\n",
+    "## to get the numpy array of a DF use data.values \n",
+    "\n",
+    "X_train_add_attr = attr_combiner.transform(X_train.values)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## now revert this to a dataframe\n",
+    "X_train_add_attr = pd.DataFrame(X_train_add_attr , columns= np.append(X_train.columns.values,[\"rooms_per_household\",\n",
+    "                                                                                              \"population_per_household\"]), \n",
+    "                               index = X_train.index)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>longitude</th>\n",
+       "      <th>latitude</th>\n",
+       "      <th>housing_median_age</th>\n",
+       "      <th>total_rooms</th>\n",
+       "      <th>total_bedrooms</th>\n",
+       "      <th>population</th>\n",
+       "      <th>households</th>\n",
+       "      <th>median_income</th>\n",
+       "      <th>ocean_proximity</th>\n",
+       "      <th>rooms_per_household</th>\n",
+       "      <th>population_per_household</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>17606</th>\n",
+       "      <td>-121.89</td>\n",
+       "      <td>37.29</td>\n",
+       "      <td>38</td>\n",
+       "      <td>1568</td>\n",
+       "      <td>351</td>\n",
+       "      <td>710</td>\n",
+       "      <td>339</td>\n",
+       "      <td>2.7042</td>\n",
+       "      <td>&lt;1H OCEAN</td>\n",
+       "      <td>4.62537</td>\n",
+       "      <td>2.0944</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18632</th>\n",
+       "      <td>-121.93</td>\n",
+       "      <td>37.05</td>\n",
+       "      <td>14</td>\n",
+       "      <td>679</td>\n",
+       "      <td>108</td>\n",
+       "      <td>306</td>\n",
+       "      <td>113</td>\n",
+       "      <td>6.4214</td>\n",
+       "      <td>&lt;1H OCEAN</td>\n",
+       "      <td>6.00885</td>\n",
+       "      <td>2.70796</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14650</th>\n",
+       "      <td>-117.2</td>\n",
+       "      <td>32.77</td>\n",
+       "      <td>31</td>\n",
+       "      <td>1952</td>\n",
+       "      <td>471</td>\n",
+       "      <td>936</td>\n",
+       "      <td>462</td>\n",
+       "      <td>2.8621</td>\n",
+       "      <td>NEAR OCEAN</td>\n",
+       "      <td>4.22511</td>\n",
+       "      <td>2.02597</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3230</th>\n",
+       "      <td>-119.61</td>\n",
+       "      <td>36.31</td>\n",
+       "      <td>25</td>\n",
+       "      <td>1847</td>\n",
+       "      <td>371</td>\n",
+       "      <td>1460</td>\n",
+       "      <td>353</td>\n",
+       "      <td>1.8839</td>\n",
+       "      <td>INLAND</td>\n",
+       "      <td>5.23229</td>\n",
+       "      <td>4.13598</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3555</th>\n",
+       "      <td>-118.59</td>\n",
+       "      <td>34.23</td>\n",
+       "      <td>17</td>\n",
+       "      <td>6592</td>\n",
+       "      <td>1525</td>\n",
+       "      <td>4459</td>\n",
+       "      <td>1463</td>\n",
+       "      <td>3.0347</td>\n",
+       "      <td>&lt;1H OCEAN</td>\n",
+       "      <td>4.50581</td>\n",
+       "      <td>3.04785</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6563</th>\n",
+       "      <td>-118.13</td>\n",
+       "      <td>34.2</td>\n",
+       "      <td>46</td>\n",
+       "      <td>1271</td>\n",
+       "      <td>236</td>\n",
+       "      <td>573</td>\n",
+       "      <td>210</td>\n",
+       "      <td>4.9312</td>\n",
+       "      <td>INLAND</td>\n",
+       "      <td>6.05238</td>\n",
+       "      <td>2.72857</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12053</th>\n",
+       "      <td>-117.56</td>\n",
+       "      <td>33.88</td>\n",
+       "      <td>40</td>\n",
+       "      <td>1196</td>\n",
+       "      <td>294</td>\n",
+       "      <td>1052</td>\n",
+       "      <td>258</td>\n",
+       "      <td>2.0682</td>\n",
+       "      <td>INLAND</td>\n",
+       "      <td>4.63566</td>\n",
+       "      <td>4.07752</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13908</th>\n",
+       "      <td>-116.4</td>\n",
+       "      <td>34.09</td>\n",
+       "      <td>9</td>\n",
+       "      <td>4855</td>\n",
+       "      <td>872</td>\n",
+       "      <td>2098</td>\n",
+       "      <td>765</td>\n",
+       "      <td>3.2723</td>\n",
+       "      <td>INLAND</td>\n",
+       "      <td>6.34641</td>\n",
+       "      <td>2.74248</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11159</th>\n",
+       "      <td>-118.01</td>\n",
+       "      <td>33.82</td>\n",
+       "      <td>31</td>\n",
+       "      <td>1960</td>\n",
+       "      <td>380</td>\n",
+       "      <td>1356</td>\n",
+       "      <td>356</td>\n",
+       "      <td>4.0625</td>\n",
+       "      <td>&lt;1H OCEAN</td>\n",
+       "      <td>5.50562</td>\n",
+       "      <td>3.80899</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15775</th>\n",
+       "      <td>-122.45</td>\n",
+       "      <td>37.77</td>\n",
+       "      <td>52</td>\n",
+       "      <td>3095</td>\n",
+       "      <td>682</td>\n",
+       "      <td>1269</td>\n",
+       "      <td>639</td>\n",
+       "      <td>3.575</td>\n",
+       "      <td>NEAR BAY</td>\n",
+       "      <td>4.84351</td>\n",
+       "      <td>1.98592</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>16512 rows × 11 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      longitude latitude housing_median_age total_rooms total_bedrooms  \\\n",
+       "17606   -121.89    37.29                 38        1568            351   \n",
+       "18632   -121.93    37.05                 14         679            108   \n",
+       "14650    -117.2    32.77                 31        1952            471   \n",
+       "3230    -119.61    36.31                 25        1847            371   \n",
+       "3555    -118.59    34.23                 17        6592           1525   \n",
+       "...         ...      ...                ...         ...            ...   \n",
+       "6563    -118.13     34.2                 46        1271            236   \n",
+       "12053   -117.56    33.88                 40        1196            294   \n",
+       "13908    -116.4    34.09                  9        4855            872   \n",
+       "11159   -118.01    33.82                 31        1960            380   \n",
+       "15775   -122.45    37.77                 52        3095            682   \n",
+       "\n",
+       "      population households median_income ocean_proximity rooms_per_household  \\\n",
+       "17606        710        339        2.7042       <1H OCEAN             4.62537   \n",
+       "18632        306        113        6.4214       <1H OCEAN             6.00885   \n",
+       "14650        936        462        2.8621      NEAR OCEAN             4.22511   \n",
+       "3230        1460        353        1.8839          INLAND             5.23229   \n",
+       "3555        4459       1463        3.0347       <1H OCEAN             4.50581   \n",
+       "...          ...        ...           ...             ...                 ...   \n",
+       "6563         573        210        4.9312          INLAND             6.05238   \n",
+       "12053       1052        258        2.0682          INLAND             4.63566   \n",
+       "13908       2098        765        3.2723          INLAND             6.34641   \n",
+       "11159       1356        356        4.0625       <1H OCEAN             5.50562   \n",
+       "15775       1269        639         3.575        NEAR BAY             4.84351   \n",
+       "\n",
+       "      population_per_household  \n",
+       "17606                   2.0944  \n",
+       "18632                  2.70796  \n",
+       "14650                  2.02597  \n",
+       "3230                   4.13598  \n",
+       "3555                   3.04785  \n",
+       "...                        ...  \n",
+       "6563                   2.72857  \n",
+       "12053                  4.07752  \n",
+       "13908                  2.74248  \n",
+       "11159                  3.80899  \n",
+       "15775                  1.98592  \n",
+       "\n",
+       "[16512 rows x 11 columns]"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X_train_add_attr"
    ]
   }
  ],
