created a pipline for categorical/num data

--- a/BooksSummarie/HandsOnMachineLearning/homl-ch2/Home Price regression model.ipynb
+++ b/BooksSummarie/HandsOnMachineLearning/homl-ch2/Home Price regression model.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -235,7 +235,7 @@
        "max         500001.000000  "
       ]
      },
-     "execution_count": 12,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -384,7 +384,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x142bf443910>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x2dd34bc3eb0>"
       ]
      },
      "execution_count": 9,
@@ -429,16 +429,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x142bf3f4520>"
+       "<matplotlib.legend.Legend at 0x2dd358579a0>"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -472,7 +472,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -490,7 +490,7 @@
        "Name: median_house_value, dtype: float64"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -510,32 +510,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[<matplotlib.axes._subplots.AxesSubplot object at 0x00000142BF750DC0>,\n",
-       "        <matplotlib.axes._subplots.AxesSubplot object at 0x00000142BF925C70>,\n",
-       "        <matplotlib.axes._subplots.AxesSubplot object at 0x00000142C004B7F0>,\n",
-       "        <matplotlib.axes._subplots.AxesSubplot object at 0x00000142BF8B93A0>],\n",
-       "       [<matplotlib.axes._subplots.AxesSubplot object at 0x00000142C00DA5B0>,\n",
-       "        <matplotlib.axes._subplots.AxesSubplot object at 0x00000142BF8E3550>,\n",
-       "        <matplotlib.axes._subplots.AxesSubplot object at 0x00000142C003A2E0>,\n",
-       "        <matplotlib.axes._subplots.AxesSubplot object at 0x00000142BF531E80>],\n",
-       "       [<matplotlib.axes._subplots.AxesSubplot object at 0x00000142BF578460>,\n",
-       "        <matplotlib.axes._subplots.AxesSubplot object at 0x00000142BF5E9820>,\n",
-       "        <matplotlib.axes._subplots.AxesSubplot object at 0x00000142BF4BF790>,\n",
-       "        <matplotlib.axes._subplots.AxesSubplot object at 0x00000142BF633A00>],\n",
-       "       [<matplotlib.axes._subplots.AxesSubplot object at 0x00000142C00008E0>,\n",
-       "        <matplotlib.axes._subplots.AxesSubplot object at 0x00000142BF5B1C10>,\n",
-       "        <matplotlib.axes._subplots.AxesSubplot object at 0x00000142BF99A5E0>,\n",
-       "        <matplotlib.axes._subplots.AxesSubplot object at 0x00000142BF523370>]],\n",
+       "array([[<matplotlib.axes._subplots.AxesSubplot object at 0x000002DD34F7D730>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x000002DD34DFCB50>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x000002DD3509B7F0>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x000002DD34AA3760>],\n",
+       "       [<matplotlib.axes._subplots.AxesSubplot object at 0x000002DD34CE0F70>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x000002DD34D18190>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x000002DD34D180D0>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x000002DD34C18C40>],\n",
+       "       [<matplotlib.axes._subplots.AxesSubplot object at 0x000002DD35784160>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x000002DD34E0CB80>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x000002DD34C6DB20>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x000002DD350ECC10>],\n",
+       "       [<matplotlib.axes._subplots.AxesSubplot object at 0x000002DD34E9AD60>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x000002DD34E8D280>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x000002DD35074D90>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x000002DD34F52C40>]],\n",
        "      dtype=object)"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -564,16 +564,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x142bf4e58e0>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x2dd34fa7520>"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -596,7 +596,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -617,7 +617,7 @@
        "Name: median_house_value, dtype: float64"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -642,7 +642,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -655,7 +655,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -696,7 +696,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -721,7 +721,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -912,7 +912,7 @@
        "[16512 rows x 8 columns]"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -923,7 +923,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -941,7 +941,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -959,7 +959,7 @@
        "       [0.]])"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -972,7 +972,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -982,7 +982,7 @@
        "       dtype=object)]"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1006,7 +1006,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1038,7 +1038,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1052,7 +1052,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1064,7 +1064,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -1304,7 +1304,7 @@
        "[16512 rows x 11 columns]"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1312,6 +1312,91 @@
    "source": [
     "X_train_add_attr"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## at this point we explored all the possible data cleaing that could be done and that's ok but we don't have an integrated product yet\n",
+    "## well in machine learning projects we do cleaning this way , we want to integrate all this in a single step \n",
+    "## and so we will use pipelines.\n",
+    "\n",
+    "## first lets create a pipeline for the numerical attributes.\n",
+    "from sklearn.pipeline import Pipeline\n",
+    "from sklearn.preprocessing import StandardScaler\n",
+    "\n",
+    "num_pipline = Pipeline([\n",
+    "    ('imputer',SimpleImputer(strategy=\"median\")),\n",
+    "    ('att_adder', CombinedAttributesAdder()),\n",
+    "    ('std_scaler',StandardScaler()),\n",
+    "])\n",
+    "\n",
+    "housing_num_tr = num_pipline.fit_transform(X_train_num)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## but we need to combine the pipline of numerical and catrgotrical att with each other.\n",
+    "## sklearn 0,2 introduced the coulmn transformer that applies the transformations by column just by taking the column name or idx\n",
+    "\n",
+    "from sklearn.compose import ColumnTransformer\n",
+    "\n",
+    "num_attributes = list(X_train_num)\n",
+    "cat_attributes = list(X_train_cat)\n",
+    "\n",
+    "full_pipeline = ColumnTransformer([\n",
+    "    (\"num\", num_pipline , num_attributes),\n",
+    "    (\"cat\", OneHotEncoder() , cat_attributes),\n",
+    "])\n",
+    "\n",
+    "X_train_cleaned = full_pipeline.fit_transform(X_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[-1.15604281,  0.77194962,  0.74333089, ...,  0.        ,\n",
+       "         0.        ,  0.        ],\n",
+       "       [-1.17602483,  0.6596948 , -1.1653172 , ...,  0.        ,\n",
+       "         0.        ,  0.        ],\n",
+       "       [ 1.18684903, -1.34218285,  0.18664186, ...,  0.        ,\n",
+       "         0.        ,  1.        ],\n",
+       "       ...,\n",
+       "       [ 1.58648943, -0.72478134, -1.56295222, ...,  0.        ,\n",
+       "         0.        ,  0.        ],\n",
+       "       [ 0.78221312, -0.85106801,  0.18664186, ...,  0.        ,\n",
+       "         0.        ,  0.        ],\n",
+       "       [-1.43579109,  0.99645926,  1.85670895, ...,  0.        ,\n",
+       "         1.        ,  0.        ]])"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X_train_cleaned\n",
+    "##  when passing this to the the model we need the data to be in the form of an array not a DF so we will not revert it back in this step\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
