--- a/BooksSummarie/HandsOnMachineLearning/homl-ch2/Home Price regression model.ipynb
+++ b/BooksSummarie/HandsOnMachineLearning/homl-ch2/Home Price regression model.ipynb
@@ -1393,10 +1393,86 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "LinearRegression()"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "## Model selection and evaluation \n",
+    "## test model #1 Linear regression\n",
+    "from sklearn.linear_model import LinearRegression\n",
+    "\n",
+    "linear_reg = LinearRegression()\n",
+    "linear_reg.fit(X_train_cleaned, Y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "predictions of LR are : [210644.60459286 317768.80697211 210956.43331178  59218.98886849\n",
+      " 189747.55849879]\n",
+      "True values are: [286600.0, 340600.0, 196900.0, 46300.0, 254500.0]\n"
+     ]
+    }
+   ],
+   "source": [
+    "## now lets test in on the training data\n",
+    "\n",
+    "sample_data = X_train.iloc[:5]\n",
+    "sample_labels = Y_train.iloc[:5]\n",
+    "sample_data_prepared = full_pipeline.transform(sample_data)\n",
+    "print(\"predictions of LR are :\" , linear_reg.predict(sample_data_prepared))\n",
+    "print(\"True values are:\", list(sample_labels))\n",
+    "\n",
+    "## absolute bullsit accuracy the first one is off by more than 40%\n",
+    "## now lets mesure the error ( RMSE )\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "68628.19819848923\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.metrics import mean_squared_error\n",
+    "\n",
+    "predictions = linear_reg.predict(X_train_cleaned)\n",
+    "mse_linreg = mean_squared_error(Y_train,predictions)\n",
+    "rmse_linreg = np.sqrt(mse_linreg)\n",
+    "\n",
+    "print(rmse_linreg)\n",
+    "## this error is in US dollars ( or generally the target attribute units )\n",
+    "## the predicted value is off by an average of 68k dollars \n",
+    "## given the fact that some discricts have an average of 120k and 240k , this is a really bad mean error.\n",
+    "## this is an example of a model that is underfitted , well this means that the model might not be good enough or that the \n",
+    "## featurs are not representative as expected. we can change the model or work on producing better features or lastly to reduce the constraints \n",
+    "## in the model. lets try the first option.\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
